--- a/release/pages/index.html
+++ b/release/pages/index.html
@@ -6,6 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Serverless Build Status</title>
+    <style>
+        #build-status-table {
+            background-color: #e0e0e0;
+        }
+        #build-status-table tr:nth-child(even) {
+            background-color: #c0c0c0;
+        }
+    </style>
 </head>
 <body>
 <div>
@@ -124,7 +132,7 @@
 
                 const statusDiv = document.getElementById('build-status');
                 statusDiv.innerHTML = `
-        <table>
+        <table id="build-status-table">
             <thead>
                 <tr>
                     <th>Branch</th>
